--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: currency_manager
 
 # Name of the container image.
-image: your-user/currency_manager
+image: wgarcia1/currency_manager
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 158.69.218.196
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +19,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: cdp.garciab.cloud
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: wgarcia1
 
   # Always use an access token rather than real password when possible.
   password:
@@ -48,7 +48,6 @@ env:
 
     # Match this to any external database server to configure Active Record correctly
     # Use currency_manager-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
 
     # Log everything from Rails
     # RAILS_LOG_LEVEL: debug
@@ -61,12 +60,10 @@ aliases:
   logs: app logs -f
   dbc: app exec --interactive --reuse "bin/rails dbconsole"
 
-
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
   - "currency_manager_storage:/rails/storage"
-
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
@@ -88,26 +85,23 @@ builder:
   #   - RAILS_MASTER_KEY
 
 # Use a different ssh user than root
-# ssh:
-#   user: app
-
+ssh:
+  user: ubuntu
 # Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
+accessories:
+  db:
+    image: postgres:16-alpine
+    host: cdp.garciab.cloud
+    port: "127.0.0.1:5432:5432"
+    # Change to 3306 to expose port to the world instead of just local network.
+    env:
+      clear:
+        POSTGRES_USER: currency_manager
+        POSTGRES_DB: currency_manager_production
+      secret:
+        - POSTGRES_PASSWORD
+    directories:
+      - "currency_manager_pg_data:/var/lib/postgresql/data"
 #   redis:
 #     image: redis:7.0
 #     host: 192.168.0.2
