--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "@tailwindcss/cli": "^4.1.13",
     "daisyui": "^5.1.9",
     "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
